# framework

./: .gitignore
auto/: .gitignore  build.sh  build_auto.sh  build_nor.sh  readme.txt
auto/build_cedar/: build_cedar.sh  readme.txt
auto/build_cedar/cedarx/: build_t5cdx.sh
auto/build_cedar/libcedarc/: 0002-dont-call-EncAdpaterRelease-in-VideoEncDestroy.patch  0003-configure.ac-change-vencoder-s-order.patch  0004-ionAlloc.c-check-g_alloc_context-at-the-beginning.patch  0005-fix-complie-bug.patch  0006-change-compile-order-in-Makefile.am.patch  build_t5cdc.sh
auto/buildcedar/: T113_cedar_compile.sh  build_cdx_arm.sh
auto/kernel/xr829/: Makefile
auto/ota/: Makefile  README.md  boot_head.h  burn_boot.c  config.h  dos.h  env.c  firmware.c  simg2img.c  spare_head.h  upgrade.c  upgrade.h
auto/qt_demo/: build - 副本.sh  build.sh  clean - 副本.sh  clean.sh  makefile_cfg  readme.txt  rebuildAll.sh
auto/qt_demo/CameraUI/: Apushqt.bat  Apushqt_run.bat  CameraUI  CameraUI.pro  Makefile  README_windows.txt  filemanager_zh.ts  makeCameraUI  qt_zh_CN.ts
auto/qt_demo/CarlifeDemo/: .qmake.stash  Apushqt.bat  CarlifeDemo.pro  font.qrc  image.qrc  makeCarlife  multiTouch.qml  qml.qrc  resource.txt
auto/qt_demo/Launcher/: .qmake.stash  Launcher.pro  Makefile  Makefile_old  image.qrc  makeLauncher  makeLauncher.bak  pushOnly.bat  push_run.bat  push_run.bat.bak
auto/qt_demo/MXAPP/: CameraWindow.qml  CameraWindow.qml.bak  ChargeManage.cpp  ChargeManage.h  ChargeManage.h.WLPSsU  ChargeManage.h.aLUjNA  ChargeWindow.qml  ClearCache.cpp  ClearCache.h  FileList.qml  HomeButton.qml  HomeWindow.qml  InfoWindow.qml  MenuListItem.qml  MenuWindow.qml  PlayerWindow.qml  README.md  SettingsWindow.qml  SupportWindow.qml  TitleBar.qml  WinAppearance.qml  WinChargeMonitor.qml  WinChargeScheme.qml  WinCloseAccount.qml  WinHomeScreen.qml  WinPayInterface.qml  WinRechargeSelect.qml  common.cpp  common.h  main.cpp  main.qml  makeMXAPP  moc_predefs.h  mxapp2.pro  qml.qrc  qmlprocess.cpp  qmlprocess.h  translator.cpp  videowidgetsurface.cpp
auto/qt_demo/MediaUI/: .gitignore  Apush.bat  Makefile  MediaUI.pro  font.qrc  image.qrc  makeMediaUI
auto/qt_demo/hellogles3/: Makefile  glwindow.h  hellogles3  hellogles3.pro  makegles3  moc_glwindow.cpp  qrc_hellogles3.cpp
auto/qt_demo/painting/: .qmake.stash  Makefile  makepainting
auto/qt_demo/phoneMachineConnect/: Apushqt.bat  customwidget.cpp  customwidget.h  declaraction.cpp  declaraction.h  declaraction.ui  failprompt.cpp  failprompt.h  failprompt.ui  floatbutton.h  help.cpp  help.h  help.ui  images.qrc  main.cpp  makemirror  phoneMachineConnect.pro  pmImages.qrc  pmmain.cpp  pmmain.h  pmmain.ui
auto/qt_demo/ui_qt_simple/: .gitignore  Apushqt.bat  Apushqt_run.bat  DvrUI.pro  makedvr  unicodeandutf8.cpp  unicodeandutf8.h
auto/rootfs/etc/: adb_conf.sh  adb_start.sh  asound.conf  cedarc.conf  cedarx.conf  config.json  dvrconfig.ini  fstab  hostapd.conf  inittab  mdev.conf  profile  qtenv.sh  qtlvds.sh  sw-version  udhcpd.conf  wpa_supplicant.conf
auto/sdk_demo/: Makefile  makefile_cfg  readme.txt  uarttest.tar.xz
auto/sdk_demo/Example/: Makefile  README.md  env.mk
auto/sdk_demo/G2dDemo/: Makefile  (+2 more)
auto/sdk_lib/: .gitignore  Makefile  makefile_cfg  push.bat  pushcdxlib.bat
auto/sdk_lib/sdk_log/: Makefile  Makefile.am  event_tag_map.c  fake_log_device.c  logprint.c  sdklog.c
cairo/: configure.ac
cairo/src/: cairo-compiler-private.h
cedarx/: .gitignore  Makefile.inc  ReadMe  build_t5cdx.sh  config.mk  configure.ac  libcdxlist.mk  tools.sh  version.h
cedarx/awrecorder/: Android.bp_d  Android.mk_d  AudioEncodeComponent.c  AudioEncodeComponent.h  EncDataComponent.c  Makefile.am  VideoEncodeComponent.c  VideoEncodeComponent.h  awencoder.c  awencoder.h
cedarx/conf/: Android.mk  ceres_cedarx.conf  dolphin_cedarx.conf  example_cedarx.conf  mercury_cedarx.conf  petrel_cedarx.conf  t3_cedarx.conf  t3_linux_cedarx.conf  t7_cedarx.conf  t8_cedarx.conf
cedarx/config/: Android.bp_s  cedarx_config.go  petrel_config.mk  venus_config.mk
cedarx/demo/: Makefile.am  TestVeMultiThread.sh
cedarx/demo/demoVdecoder/: Android.bp_s  Android.mk  Makefile.am  demoVdecoder  demoVdecoder.c
cedarx/demo/demoVencVdec/: Android.bp_s  EncoderDecoderTest.c  Makefile.am  demoVencVdec
cedarx/demo/jpegdemo/: Android.bp_s  Android.mk  Makefile.am  jpegdemo  jpegdemo.c
cedarx/demo/libion/: Android.bp_s  Makefile.am  ion_alloc.c
cedarx/demo/xmetademo/: Android.bp_s  Android.mk  Makefile.am  xmetademo  xmetademo.c
cedarx/libcore/parser/dsd/: Android.bp_s  CdxDsdParser.c  Makefile.am
cedarx/libcore/parser/g729/: Android.bp_s  CdxG729Parser.c  Makefile.am
cedarx/libcore/parser/wv/: Android.bp_s  Android.mk  CdxWvParser.c  CdxWvParser.h  Makefile.am
cedarx/xmetadataretriever/: Android.bp_s  Android.mk  Makefile.am  xmetadataretriever.c
cedarx/xplayer/: Android.bp_s  Android.mk  Makefile.am  cache.c  demuxComponent.c  demuxComponent.h  xplayer.c
libcedarc/: .gitignore  Android.bp  Makefile.am  build_cdc_arm.sh  config.mk  configure  configure.ac  libcdclist.mk  mkswitch.sh
libcedarc/base/: Android.bp  CdcIonUtil.c  CdcMalloc.c  CdcMessageQueue.c  CdcSinkInterface.c  CdcTimeUtil.c  Makefile.am
libcedarc/conf/: Android.bp  Android.mk_d  Makefile.am
libcedarc/config/: Android.bp  cedarc.conf  cedarc_config.go  config_box_H6_Nougat.mk  config_box_H6_Oreo.mk  config_box_H6_Pie.mk  config_box_H6_kitkat.mk  config_cdr_T7_Nougat.mk  config_ipc_V5_eyeseelinux.mk  config_pad_A50_Pie.mk  config_pad_A64_Pie.mk
libcedarc/include/: Android.bp  vbasetype.h  vdecoder.h
libcedarc/memory/: Android.bp  memoryAdapter.c
libcedarc/openmax/: Android.bp
libcedarc/openmax/venc/: Android.bp  Android.mk_d  Makefile.am  neon_rgb2yuv.s  omx_common.c  omx_venc.c  omx_venc.h  omx_venc_adapter.h  omx_venc_android_adapter.cpp  omx_venc_linux_adapter.c
libcedarc/vdecoder/: Android.bp  pixel_format.c  vdecoder.c
libcedarc/vencoder/: Android.bp  vencoder.c
pixman/: Makefile.am
qt/qt-everywhere-src-5.12.5/: buildsetup.sh  buildsetup_sf.sh  buildsetup_t113.sh  qtenv.sh
(+1213 files in other folders)
